added border in h3 tag

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </h1>
 
             </div>
-            <div class="col-md-5" class="border-start border-3 ">
-                <h3 id="para">
+            <div class="col-md-5">
+                <h3 id="para" class=" border-start px-2">
                     Lorem ipsum nisl sed cursus magna et amet veroeros. Sed phasellus
                     aliquam et tempus lorem feugiat adipiscing lorem.
                 </h3>
